<resources>
    <string name="app_name">ΣΑΚ Mobile</string>
    <string name="newOrder">Νέα Παραγγελία</string>
    <string name="loadOrder">Εμφάνιση Παραγγελίας</string>
    <string name="loadReturns">Εμφάνιση Επιστροφών</string>
    <string name="mobileStreet">Mobile Street</string>
    <string name="newItem">Προσθήκη Νέου Αντικειμένου</string>
    <string name="settings">Ρυθμήσεις</string>
    <string name="items">Είδη</string>
    <string name="ok">OK</string>
    <string name="check">Έλεγχος</string>
    <string name="next">Επόμενο</string>
    <string name="checkOut">Προεπισκόπηση Παραγγελίας</string>
    <string name="createCustomer">Δημιουργία Νέου Πελάτη</string>
    <string name="searchCustomer">Αναζήτηση Πελάτη</string>
    <string name="offer">Προσφορά</string>
    <string name="b2b">B2B</string>
    <string name="order">Παραγγελία</string>
    <string name="cusinfo">Πληροφορίες Πελάτη</string>
    <string name="MBUrl">http://192.168.10.1:1010/</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logIn">Είσοδος</string>
    <string name="customerCodeName">Κωδικός, Όνομα</string>
    <string name="customerTin">ΑΦΜ</string>
    <string name="customerAddressCityPCode">Διεύθυνση, Πόλη, Τ.Κ.</string>
    <string name="customerPhones">Τηλέφωνο, Τηλέφωνο 2, Κινητό</string>
    <string name="invoiceType">Τύπος Παραστατικού</string>
    <string name="defaultInvoiceType">Επιστροφή</string>
    <string name="srch">"Αναζήτηση: "</string>
    <string name="search">Αναζήτηση</string>
    <string name="newRouting">Νέο δρομολόγιο</string>
    <string name="code">Κωδικός</string>
    <string name="name">Όνομα</string>
    <string name="tin">ΑΦΜ</string>
    <string name="address">Διεύθυνση</string>
    <string name="city">Πόλη</string>
    <string name="postalCode">Τ.Κ.</string>
	<string name="previous">Προηγούμενο</string>
    <string name="telephoneNumber">Τηλέφωνο</string>
    <string name="telephoneNumber2">Τηλέφωνο 2</string>
    <string name="mobileNumber">Κινητό</string>
    <string name="phones">Τηλέφωνα</string>
    <string name="email">E-mail</string>
    <string name="characters_d_d">"(Χαρακτήρες: %1$d/%2$d)"</string>
    <string name="traMessage">Σχόλια Τιμολόγησης</string>
    <string name="mainEmail">Κύριο E-mail</string>
    <string name="secondaryEmail">Δευτερεύον E-mail</string>
    <string name="create">Δημιουργία</string>
    <string name="cancel">Ακύρωση</string>
    <string name="selectedCustomer">Επιλεγμένος Πελάτης</string>
    <string name="customerlist">Λίστα Πελατών</string>
    <string name="image">Εικόνα</string>
    <string name="description">Περιγραφή</string>
    <string name="price">Τιμή</string>
    <string name="priceWithVAT">Τιμή με ΦΠΑ</string>
    <string name="quantity">Ποσότητα</string>
    <string name="lastQuantity">Ποσότητα Τελευταίας Πώλησης</string>
    <string name="discount">Έκπτωση</string>
    <string name="value">Αξία</string>
    <string name="valueWithVat">Αξία με ΦΠΑ</string>
    <string name="document">Έγγραφο</string>
    <string name="codeDescAltCode">Κωδικός, Περιγραφή, Εναλλακτικός κωδικός</string>
    <string name="open">Άνοιγμα</string>
    <string name="close">Κλείσιμο</string>
    <string name="company">Εταιρία</string>
    <string name="company_">"Εταιρία: "</string>
    <string name="companySite">Κατάστημα</string>
    <string name="companySite_">"Κατάστημα: "</string>
    <string name="item">Είδος</string>
    <string name="save">Αποθήκευση</string>
    <string name="additionalItemInformation">Επιπρόσθετες Πληροφορίες Είδους</string>
    <string name="exit">Έξοδος</string>
    <string name="taxlevel">Καθεστώς ΦΠΑ</string>
    <string name="paymentTerm">Τρόπος Πληρωμής</string>
    <string name="defaultPaymentTerm">Επί Πιστώση</string>
    <string name="searchItems">Αναζήτηση Ειδών</string>
	<string name="search_menu_title">Search</string>
    <string name="customer">Πελάτης</string>
    <string name="total">Σύνολο</string>
    <string name="total_">"Σύνολο: "</string>
    <string name="cashTotal_">"Σύνολο Μετρητών: %1$s"</string>
    <string name="securitiesTotal_">"Σύνολο Αξιόγραφων: %1$s"</string>
    <string name="expensesTotal_">"Σύνολο Εξόδων: %1$s"</string>
    <string name="currencyTotal_">"Σύνολο Νομισμάτων: %1$s"</string>
    <string name="difference_">"Διαφορά: %1$s"</string>
    <string name="date">Ημερομηνία</string>
    <string name="delete">Διαγραφή</string>
    <string name="deleteInvoices">"Διαγραφή όλων των παραστατικών."</string>
    <string name="invoices">Παραστατικά</string>
    <string name="sync">Συγχρονισμός</string>
    <string name="syncCustomerItem">Συγχρονισμός πωλητών, πελατών, προϊόντων</string>
	<string name="status_bar_notification_info_overflow">999+</string>
    <string name="syncInvoice">Συγχρονισμός παραστατικών(παραγγελίες, εισπράξεις, επιστροφές)</string>
    <string name="start">Έναρξη</string>
    <string name="send">Αποστολή</string>
    <string name="customers">Πελάτες</string>
    <string name="users">Χρήστες</string>
    <string name="images">Εικόνες</string>
    <string name="complete">Ολοκλήρωση</string>
    <string name="onlineReports">Online Εκτυπώσεις</string>
    <string name="onlineReport">Online Εκτύπωση</string>
    <string name="customerReport">Καρτέλα Πελάτη</string>
    <string name="onlineIpAddress">Online Διεύθυνση IP</string>
    <string name="localIpAddress">Τοπική Διεύθυνση IP</string>
    <string name="zoomIn">Μεγέθυνση</string>
    <string name="from_">"Από: "</string>
    <string name="to_">"Εώς: "</string>
    <string name="code_">"Κωδικός: "</string>
    <string name="name_">"Όνομα: "</string>
    <string name="tin_">"ΑΦΜ: "</string>
    <string name="street_">"Διεύθυνση: "</string>
    <string name="city_">"Πόλη: "</string>
    <string name="postalCode_">"Τ.Κ.: "</string>
    <string name="phone1_">"Τηλέφωνο: "</string>
    <string name="phone2_">"Τηλέφωνο2: "</string>
    <string name="mobile_">"Κινητό: "</string>
    <string name="email_">"E-mail: "</string>
    <string name="credit_">"Πίστωση: "</string>
    <string name="debit_">"Χρέωση: "</string>
    <string name="balances_">"Υπόλοιπα: "</string>
    <string name="execute">Εκτέλεση</string>
    <string name="collections">Εισπράξεις</string>
    <string name="loadCollections">Εμφάνιση Εισπράξεων</string>
    <string name="cash_">"Μετρητά: "</string>
    <string name="cashFromCus_">"Μετρητά από πελάτη: "</string>
    <string name="split">Μοίρασε</string>
    <string name="bank">Τράπεζα</string>
    <string name="expiration">Λήξη</string>
	<string name="managementCost">Κόστος Διαχείρησης</string>
    <string name="managementCost_s">Κόστος Διαχείρησης: %1$s%%</string>
	<string name="extraChargeManagementCost">Επιβάρυνση Κόστος Διαχείρησης</string>
    <string name="extraChargeTransfer">Επιβάρυνση Μεταφορικά</string>
    <string name="number">Αριθμός</string>
    <string name="submit">Καταχώρηση</string>
    <string name="username">Όνομα Χρήστη</string>
    <string name="password">Κωδικός</string>
    <string name="user_">"Χρήστης: "</string>
    <string name="changeCustomerDetails">Αλλαγή Στοιχείων Πελάτη</string>
    <string name="additionalCustomerDetails">Επιπρόσθετα Στοιχεία Πελάτη</string>
    <string name="returns">Επιστροφές</string>
    <string name="returnItems">Επιστροφή Ειδών</string>
    <string name="checkOutReturnItems">Προεπισκόπηση Επιστροφής Ειδών</string>
    <string name="returN">Επιστροφή</string>
    <string name="userlogin">Είσοδος Χρήστη</string>
    <string name="notes">Σχόλια</string>
    <string name="invoiceNotes">Σχόλια Παραστατικού</string>
    <string name="addSecurityPaper">Προσθήκη Αξιόγραφου</string>
    <string name="checks_">"Επιταγές: "</string>
    <string name="checks">Επιταγές</string>
    <string name="comments_">"Σχόλια: "</string>
    <string name="comments2">"Επιπλέον Σχόλια: "</string>
    <string name="generalNotes">Γενικά Σχόλια</string>
    <string name="date_company">Ημερομηνία - Εταιρία</string>
    <string name="add">Προσθήκη</string>
    <string name="back">Πίσω</string>
    <string name="forward">Μπροστά</string>
    <string name="sendEmail">Αποστολή E-mail</string>
    <string name="securityPapers">Αξιόγραφα</string>
    <string name="addCheck">Προσθήκη Επιταγής</string>
    <string name="addPromissoryNote">Προσθήκη Γραμματίου</string>
    <string name="subtotals_">"Υποσύνολα: "</string>
    <string name="guarantee">Εγγύηση</string>
    <string name="guaranteeForm">Φόρμα Εγγύησης</string>
    <string name="noDirectoryCreated">"Δεν δημιουργήθηκε ο φάκελος: %1$s"</string>
    <string name="financialData">Οικονομικά Στοιχεία</string>
    <string name="newBalances_">"Νέα Υπόλοιπα: "</string>
    <string name="finalBalances_">"Τελικά Υπόλοιπα: "</string>
    <string name="returns_">"Επιστροφές: "</string>
    <string name="balanceEY_">"Υπόλοιπο ΕΥ: "</string>
    <string name="balanceSY_">"Υπόλοιπο ΣΥ: "</string>
    <string name="overallBalance_">Γενικό Υπόλοιπο: </string>
    <string name="balanceFormation_">Διαμόρφωση Υπολοίπου: </string>
    <string name="karampasisA">Καραμπάσης Α</string>
    <string name="karampasisAEY">Καραμπάσης Α ΕY</string>
    <string name="karampasisASY">Καραμπάσης Α ΣY</string>
    <string name="karampasisF">Καραμπάσης Φ</string>
    <string name="karampasisFEY">Καραμπάσης Φ ΕY</string>
    <string name="karampasisFSY">Καραμπάσης Φ ΣY</string>
    <string name="totalEY">Σύνολο ΕY</string>
    <string name="totalSY">Σύνολο ΣY</string>
    <string name="setReturnsQuestion">"Θέλετε να καταχωρείσετε την επιστροφή;"</string>
    <string name="yes">Ναι</string>
    <string name="no">Όχι</string>
    <string name="memoColorCompleted">":έχει ολοκληρωθεί"</string>
    <string name="welcome">"Καλωσήλθες %1$s"</string>
    <string name="cashAnalysis_">"\t-Μετρητά: %1$s"</string>
    <string name="checkAnalysis_">"\t-Επιταγή της τράπεζας: %1$s, με ημερομηνία λήξης: %2$s, αριθμό: %3$s και αξία: %4$s"</string>
    <string name="promissoryNoteAnalysis_">"\t-Γραμμάτιο με ημερομηνία λήξης: %1$s και αξία: %2$s"</string>
    <string name="analysis">"Ανάληση"</string>
    <string name="Script">"Χειρόγραφο"</string>
    <string name="fromCustomer">"Από πελάτη"</string>
    <string name="hotel_">"Ξενοδοχείο: "</string>
    <string name="meals_">"Γεύματα: "</string>
    <string name="fuel_">"Βενζίνες: "</string>
    <string name="misc_">"Διάφορα: "</string>
    <string name="expenses">"Έξοδα"</string>
    <string name="currencyCalculator">"Υπολογισμός Αξίας Νομισμάτων"</string>
    <string name="update">"Ενημέρωση"</string>
    <string name="fromChecks_">"Μετρητά από επιταγές: %1$s"</string>
    <string name="checkNum_">"Πλήθος Επιταγών: %1$s"</string>
    <string name="deposit_">"Κατάθεση: %1$s"</string>
	<string name="deposits">Κατάθεσεις</string>
    <string name="deposits_">Κατάθεσεις: %1$s</string>
    <string name="syncUpdate">"Λήψη νέας έκδοσης της εφαρμογής."</string>
    <string name="version_">"Έκδοση: "</string>
    <string name="recentPurchases">"Πρόσφατες Αγορές"</string>
    <string name="docNumber_">"Αριθμός Απόδειξης: "</string>
    <string name="docNum_">"Αριθμός Παραστατικού: "</string>
    <string name="dateBought">"Ημερομηνία Αγοράς: "</string>
    <string name="DAEL">"ΔΑΕΛ: "</string>
    <string name="DEA">"ΔΕΑ: "</string>
    <string name="tradeName_">"Επωνυμία: "</string>
    <string name="cusCode_">"Κωδικός Πελάτη: "</string>
    <string name="itemCode_">"Κωδικός Ανταλλακτικού: "</string>
    <string name="salesmanName_">"Όνομα πωλητή που το παρέλαβε: "</string>
    <string name="vehicleDetails">"Στοιχεία οχήματος"</string>
    <string name="manufacturer_">"ΚΑΤΑΣΚΕΥΑΣΤΗΣ: "</string>
    <string name="model_">"ΜΟΝΤΕΛΟ: "</string>
	<string name="customerService">Εξυπηρέτηση πελάτη</string>
    <string name="toVisit">Επίσκεψη</string>
    <string name="visited">Επισκέφτηκε</string>
    <string name="coupon">Κουπόνι</string>
</resources>