<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="organotiki.mobile.mobilestreet.NewOrder">

    <item
        android:id="@+id/createCustomer"
        android:icon="@drawable/ic_person_add_white_48dp"
        android:title="@string/createCustomer"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/searchCustomer"
        android:icon="@drawable/ic_person_outline_white_48dp"
        android:title="@string/searchCustomer"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/newItem"
        android:icon="@drawable/ic_add_shopping_cart_white_48dp"
        android:title="@string/newItem"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/next"
        android:icon="@drawable/ic_chevron_right_white_48dp"
        android:title="@string/next"
        android:orderInCategory="200"
        app:showAsAction="ifRoom" />
</menu>