<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
        <RelativeLayout android:orientation="vertical" android:layout_width="717dp" android:layout_height="440dp">
            <TextView android:textSize="25sp" android:textColor="@color/colorAccent" android:gravity="center" android:id="@+id/textView_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/deposits" android:layout_toStartOf="@+id/button_add"/>
            <Button android:textSize="18sp" android:id="@+id/button_add" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/add" android:layout_toStartOf="@+id/button_ok"/>
            <Button android:textSize="18sp" android:id="@+id/button_ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ok" android:layout_alignEnd="@+id/linearLayout_header"/>
            <LinearLayout android:orientation="horizontal" android:id="@+id/linearLayout_header" android:background="@color/colorPrimary" android:layout_width="match_parent" android:layout_height="25dp" android:layout_marginTop="30dp" android:layout_below="@+id/textView_title">
                <TextView android:textColor="@color/colorAccent" android:gravity="center" android:id="@+id/column_header1" android:layout_width="300dp" android:layout_height="match_parent" android:text="@string/date" android:singleLine="true" android:layout_weight="1"/>
                <TextView android:background="#000" android:layout_width="5dp" android:layout_height="match_parent"/>
                <TextView android:textColor="@color/colorAccent" android:gravity="center" android:id="@+id/column_header2" android:layout_width="200dp" android:layout_height="match_parent" android:text="@string/value" android:singleLine="true" android:layout_weight="1"/>
                <TextView android:background="#000" android:layout_width="5dp" android:layout_height="match_parent"/>
                <TextView android:textColor="@color/colorAccent" android:gravity="center" android:id="@+id/column_header5" android:layout_width="47dp" android:layout_height="match_parent" android:text="@string/delete" android:singleLine="true"/>
            </LinearLayout>
            <ListView android:id="@+id/listView_checks" android:descendantFocusability="beforeDescendants" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/linearLayout_header"/>
        </RelativeLayout>
    </RelativeLayout>
</HorizontalScrollView>
